# beatport-downloader

./: .env  .pypirc  Beatport Auto Downloader.spec  Beatport Track Finder.spec  GUMROAD_IMAGES.md  GUMROAD_LISTING.md  GUMROAD_README.md  MANIFEST.in  README.md  beatport.spec  build_installer.py  build_windows.bat  installer.iss  large_screen_source.html  main.py  page_source.html  preferences.json  pyproject.toml  run_tests.bat  run_windows_test.bat  selector_test_report.json  selector_test_results.json  selector_test_summary.txt  selectors.json  setup.py  small_screen_source.html  test_app.py  test_features.py  test_locally.bat  test_output.txt  test_selectors.py
beatport_auto/: __init__.py  __main__.py  data  test_selectors.py
beatport_auto.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
beatport_auto/utils/: selector_manager.py
