[build-system]
requires = ["setuptools>=45", "wheel", "setuptools_scm>=6.2"]
build-backend = "setuptools.build_meta"

[project]
name = "beatport-auto"
version = "1.0.0"
description = "Automated Beatport track downloader with resilient selector management"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Topic :: Internet :: WWW/HTTP :: Dynamic Content",
    "Topic :: Multimedia :: Sound/Audio",
]
dependencies = [
    "selenium>=4.0.0",
    "webdriver_manager>=4.0.0",
    "requests>=2.25.0",
    "python-dotenv>=0.19.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/beatport-auto"
Repository = "https://github.com/yourusername/beatport-auto.git"
"Bug Tracker" = "https://github.com/yourusername/beatport-auto/issues"

[project.scripts]
beatport-auto = "beatport_auto.main:main"
beatport-test = "beatport_auto.test_selectors:main"

[tool.setuptools]
packages = ["beatport_auto"]
